--- a/Joseph_Mukama_portfilio.html
+++ b/Joseph_Mukama_portfilio.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Mukama Joseph's Portfilio</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
 
@@ -44,7 +45,7 @@ and with this, i think it will contribute much to my sucess</p>
     title="YouTube video player" frameborder="0" allow="accelerometer;
      autoplay; clipboard-write; encrypted-media; 
      gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    
+    <hr
     <hr>
 
     <!--Academic results for year one semester one-->
